[package]
name = "rn_coloring_es"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
swc_plugin = "0.49.0"
rn_coloring = { path = "../rn-coloring", version = "0.1.0" }

[dev-dependencies]
js-sys = "0.3.56"
swc = { version = "0.164.0", features = ["plugin"] }
swc_common = { version = "0.17.21", features = ["tty-emitter"] }
swc_ecma_parser = "0.102.11"
swc_ecma_transforms_testing = "0.82.1"
wasmer-vfs = { version = "2.2.1", features = ["mem-fs"] }
wasmer = { version = "2.2.1", features = ["sys"] }
wasmer-wasi = { version = "2.2.1", features = ["sys"] }
swc_plugin_runner = { version = "0.50.5",features = ["filesystem_cache"] }
