[package]
name = "service-injection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[dependencies]
anyhow = "1.0.54"
serde = "1.0.136"
serde_json = "1.0.79"
swc_plugin = "0.49.0"

[dev-dependencies]
js-sys = "0.3.56"
swc = { version = "0.164.0", features = ["plugin"] }
swc_common = { version = "0.17.21", features = ["tty-emitter"] }
swc_ecma_parser = "0.102.11"
swc_ecma_transforms_testing = "0.82.1"
wasmer-vfs = { version = "2.2.1", features = ["mem-fs"] }
wasmer = { version = "2.2.1", features = ["sys"] }
wasmer-wasi = { version = "2.2.1", features = ["sys"] }
swc_plugin_runner = { version = "0.50.5",features = ["filesystem_cache"] }

[[example]]
name = "usage"